public/stylesheets/main.css
.display-4{
    font-weight: 500;
}
.jumbotron {
    padding: 3rem 2rem;
}

.search input{
    margin: 0.25rem 0;
}
.form-signin {
    width: 100%;
    max-width: 330px;
    padding: 15px;
    margin: 0 auto;
}

#campground-grid .card-img-top {
    width: 100%;
    height: 30vw;
    object-fit: cover;
}

#main {
    padding: 0;
}

.form-signin .form-control {
    position: relative;
    box-sizing: border-box;
    height: auto;
    padding: 10px;
    font-size: 16px;
}

.form-signin .form-control:focus {
    z-index: 2;
}

.form-signin input[type="text"] {
    margin-bottom: -1px;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

.form-signin input[type="password"] {
    margin-bottom: 10px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}
#adminCode {
    margin-bottom: 10px;
}

/* Sticky footer styles
-------------------------------------------------- */

html {
    position: relative;
    min-height: 100%;
}

body {
    /* Margin bottom by footer height */
    margin-bottom: 60px;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 60px;
    background-color: #f5f5f5;
}

.container .text-muted {
    margin: 20px 0;
}

/* Campground show page delete button */
.delete-form{
    display: inline-block;
}

/* Google Maps */
#map {
    height: 400px;
    width: 100%;
}

